--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,48 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.banner{
+    background-image: url('../images/banner/banner1.png');
+    height: 808px;
+    background-position: center;
+    background-repeat: none;
+    background-size: cover;
+}
+
+.banner-contents{
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    text-align: right;
+    padding-right: 230px;
+    padding-left: 845px;
+    padding-top: 216px;
+}
+
+.banner-title{
+    font-size: 65px;
+    color:  #151414;
+    font-weight: 700;
+    margin-bottom: 4;
+}
+
+.banner-txt{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color:  #444343;
+    margin-bottom: 32px;
+}
+
+.primary-btn{
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    background: #F15B22;
+    padding: 20px 25px;
 }
