--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+/* Header Section */
+
 .banner{
     background-image: url('../images/banner/banner1.png');
     height: 808px;
@@ -17,8 +19,8 @@
     flex-direction: column;
     flex-shrink: 0;
     text-align: right;
-    padding-right: 230px;
-    padding-left: 845px;
+    padding-right: 14.4%;
+    padding-left: 52.8%;
     padding-top: 216px;
 }
 
@@ -45,4 +47,73 @@
     border: none;
     background: #F15B22;
     padding: 20px 25px;
+}
+
+
+main{
+    margin: 120px 230px;
+}
+
+li{
+    list-style: none;
+}
+/* Failures Section */
+
+.failure-section-container{
+    display: flex;
+    justify-content: space-around;
+    flex-shrink: 0;
+    align-items: center;
+}
+
+.failure-img-container{
+    width: 50%;
+    margin: auto;
+    border-radius: 527.929px;
+    background: rgba(241, 91, 34, 0.20);
+    width: 527.929px;
+    height: 527.929px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+.failure-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.failure-text-container{
+    width: 50%;
+}
+
+.failure-align{
+    padding-left: 100px;
+}
+
+.failure-title{
+    color:  #151414;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.failure-description{
+    color: var #444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.failure-list-items{
+    color: #444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.failure-list-items::before{
+    content: '✓    ';
 }
