--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     background-image: url('../images/banner/banner1.png');
     height: 808px;
     background-position: center;
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -60,15 +60,14 @@ li{
 /* Failures Section */
 
 .failure-section-container{
+    padding-top: 200px;
     display: flex;
-    justify-content: space-around;
-    flex-shrink: 0;
+    justify-content:space-between;
     align-items: center;
+    gap: 120px;
 }
 
 .failure-img-container{
-    width: 50%;
-    margin: auto;
     border-radius: 527.929px;
     background: rgba(241, 91, 34, 0.20);
     width: 527.929px;
@@ -80,17 +79,12 @@ li{
 }
 
 .failure-img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: -196px;
+    margin-left: -23px;
 }
 
 .failure-text-container{
     width: 50%;
-}
-
-.failure-align{
-    padding-left: 100px;
 }
 
 .failure-title{
@@ -105,6 +99,7 @@ li{
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
+    margin-bottom: 16px;
 }
 
 .failure-list-items{
