--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,14 @@
 }
 
 .banner-title{
-    font-size: 65px;
+    font-size: 4rem;
     color:  #151414;
     font-weight: 700;
     margin-bottom: 4;
 }
 
 .banner-txt{
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 26px;
     color:  #444343;
@@ -41,7 +41,7 @@
 
 .primary-btn{
     color: #FFF;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     border-radius: 5px;
     border: none;
@@ -51,7 +51,8 @@
 
 
 main{
-    margin: 120px 230px;
+    margin: 120px auto;
+    width: 71.25%;
 }
 
 li{
@@ -89,14 +90,14 @@ li{
 
 .failure-title{
     color:  #151414;
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 24px;
 }
 
 .failure-description{
     color: var #444343;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 26px;
     margin-bottom: 16px;
@@ -104,11 +105,81 @@ li{
 
 .failure-list-items{
     color: #444343;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 26px;
 }
 
 .failure-list-items::before{
     content: '✓    ';
+}
+
+/* Service Section */
+
+.service{
+    padding-top: 80px;
+}
+
+.plans-sect-title{
+    color: #151414;
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-align: center;
+    padding: 40px;
+}
+
+.plans-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.plans-titles{
+    color: #151414;
+    font-size: 1.875rem;
+    font-weight: 700;
+    padding: 15px 30px;
+}
+
+.plans-text{
+    color: #737272;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+/* Call Now Section */
+
+.call-now-section{
+    width: 100%;
+    height: 300px;
+    background-image: linear-gradient(90deg, #F15B22 0%, rgba(241, 93, 34, 0) 100%), url('../images/watch.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+}
+
+.second-btn{
+    color: #F15B22;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    padding: 12px 25px;
+}
+
+.call-now-container{
+    margin-left: 64px;
+}
+
+.call-me-text{
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    padding-bottom: 40px;
 }
