--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,53 @@ li{
     font-weight: 700;
     padding-bottom: 40px;
 }
+
+/* Footer Section */
+
+footer{
+    height: 577px;
+    background-color: #000;
+}
+
+.footer-container{
+    padding-top: 120px;
+    margin: auto;
+    width: 71.25%;
+    color: #fff;
+    display: flex;
+    justify-content: left;
+    gap: 200px;
+}
+
+.footer-left{
+    width: 50%;
+}
+
+.footer-titles{
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 26px;
+}
+
+.footer-txt{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+
+.social-icons{
+    margin-right: 20px;
+}
+
+input{
+    color: #F3F3F3;
+    font-size: 18px;
+    font-weight: 400;
+    border: solid white 1px;
+    background-color: #000;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 16px;
+    width: 100%;
+}
