--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ li{
 .second-btn{
     color: #F15B22;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     border-radius: 5px;
     background: #FFF;
@@ -179,7 +179,7 @@ li{
 
 .call-me-text{
     color: #FFF;
-    font-size: 40px;
+    font-size: 2.5;
     font-weight: 700;
     padding-bottom: 40px;
 }
@@ -206,7 +206,7 @@ footer{
 }
 
 .footer-titles{
-    font-size: 45px;
+    font-size: 2.81rem;
     font-weight: 700;
     margin-bottom: 26px;
 }
@@ -224,7 +224,7 @@ footer{
 
 input{
     color: #F3F3F3;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     border: solid white 1px;
     background-color: #000;
